--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -3,15 +3,14 @@ server.port=0
 spring.cloud.config.uri=http://localhost:8888
 eureka.instance.instance-id=${spring.application.name}:${random.uuid}
 management.endpoints.web.exposure.include=*
-
-#spring.cloud.loadbalancer.ribbon.enabled=false
-#spring.cloud.gateway.default-filters=TokenRelay
-
+#
+# vault
 # spring.cloud.vault.scheme=http can't be in the config server
 spring.cloud.vault.scheme=http
 spring.cloud.vault.token=faketokenxxxyyyzzz
 spring.cloud.vault.application-name=product-service
-
+#
+# rabbitmq
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
